tests/ui/borrowck/issue-81365-7.stderr
error[E0506]: cannot assign to `c.container_field` because it is borrowed
  --> $DIR/issue-81365-7.rs:20:5
   |
LL |     let first = &c.target_field;
   |                  - `c.container_field` is borrowed here
LL |     c.container_field = true;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ `c.container_field` is assigned to here but it was already borrowed
LL |     first;
   |     ----- borrow later used here
   |
   = note: borrow occurs due to deref coercion to `DerefTarget`
note: deref defined here
  --> $DIR/issue-81365-7.rs:12:5
   |
LL |     type Target = DerefTarget;
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
